--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -10,8 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.11.1",
+    "eslint": "^9.11.1",
+    "globals": "^15.9.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.10",
     "prettier": "^3.3.3"
-  }
+  },
+  "lint-staged": {
+  "*.js": [
+    "eslint",
+    "prettier --write ."
+  ]
+}
 }
