--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -5,7 +5,7 @@
   "main": "todo.js",
   "scripts": {
     "test": "jest",
-    "prepare": "husky init"
+    "prepare": "husky"
   },
   "author": "",
   "license": "ISC",
@@ -17,11 +17,5 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3"
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint",
-      "prettier --write ."
-    ]
   }
 }
