--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -17,5 +17,22 @@
     "jest": "^28.1.3",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "prettier --write",
+      "eslint --fix",
+      "jest --findRelatedTests",
+      "git add"
+    ],
+    "*.{html,css,less,ejs,json}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
