--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "todo.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install .husky"
   },
   "author": "",
   "license": "ISC",
