--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "devDependencies": {
-    "husky": "^8.0.1"
+    "eslint": "^9.12.0",
+    "globals": "^15.10.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3"
   },
   "scripts": {
     "prepare": "husky install todo-cli/.husky"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "prettier --write ."
+    ]
   }
 }
