--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -11,11 +11,16 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.11.1",
-    "eslint": "^9.11.1",
-    "globals": "^15.9.0",
+    "eslint": "^9.12.0",
+    "globals": "^15.10.0",
     "husky": "^8.0.1",
     "jest": "^28.1.3",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3"
-  }
+  },"lint-staged": {
+  "*.js": [
+    "eslint",
+    "prettier --write ."
+  ]
+}
 }
