--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -17,10 +17,11 @@
     "jest": "^28.1.3",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3"
-  },"lint-staged": {
-  "*.js": [
-    "eslint",
-    "prettier --write ."
-  ]
-}
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "prettier --write ."
+    ]
+  }
 }
